<resources>
    <string name="app_name">Search</string>

    <!-- Search Fragment -->
    <string name="search_food">Search Food</string>
    <string name="search_for_anything">Search for anything</string>
    <string name="restaurant">Restaurant</string>
    <string name="food_item">Food Item</string>
    <string name="dollar_sign">$</string>
    <string name="fake_rating_counter">(25+)</string>
    <string name="notice">Uh oh!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="fake_rating_count">(25+)</string>
    <string name="results">Found\n%s results</string>
</resources>