<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_24sdp"
    android:layout_marginEnd="@dimen/_24sdp"
    android:background="@drawable/bg_alert_dialog">

    <TextView
        android:id="@+id/alert_dialog_title"
        android:fontFamily="@font/sofia_pro_semi_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/notice"
        android:textColor="@color/black"
        android:textSize="@dimen/_24ssp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alert_dialog_msg"
        android:layout_width="match_parent"
        android:fontFamily="@font/sofia_pro_medium"
        android:textSize="@dimen/_14ssp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_dialog_title" />

    <Button
        android:id="@+id/alert_dialog_cacenl_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/sofia_pro_semi_bold"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_dialog_ok_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/alert_dialog_ok_button"
        android:fontFamily="@font/sofia_pro_semi_bold"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_32sdp"
        android:text="@string/ok"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_dialog_msg" />



</androidx.constraintlayout.widget.ConstraintLayout>