<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.SearchFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/sofia_pro_medium"
            android:maxLines="1"
            android:text="@string/search_food"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintBottom_toBottomOf="@+id/back_iv"
            app:layout_constraintEnd_toStartOf="@+id/profile_iv"
            app:layout_constraintStart_toEndOf="@+id/back_iv"
            app:layout_constraintTop_toTopOf="@+id/back_iv" />


        <carbon.widget.ImageView
            android:id="@+id/back_iv"
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginStart="@dimen/global_margin"
            android:background="@drawable/bg_button"
            android:elevation="@dimen/_20sdp"
            android:padding="@dimen/_13sdp"
            android:src="@drawable/ic_back"
            app:carbon_elevationShadowColor="@color/white_shadow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <carbon.widget.ImageView
            android:id="@+id/profile_iv"
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/global_margin"
            android:background="@drawable/bg_profile"
            android:elevation="@dimen/_20sdp"
            android:src="@drawable/profile"
            app:carbon_cornerRadius="@dimen/_12sdp"
            android:scaleType="centerCrop"
            android:paddingTop="@dimen/_3sdp"
            android:backgroundTint="@color/yellow"
            app:carbon_elevationShadowColor="@color/yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/search_et"
            style="@style/Widget.App.EditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/global_margin"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/bg_edit_text"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/_16sdp"
            android:hint="@string/search_for_anything"
            android:importantForAutofill="no"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            app:layout_constraintEnd_toStartOf="@+id/filter_iv"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <carbon.widget.ImageView
            android:id="@+id/filter_iv"
            android:src="@drawable/ic_filter"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginEnd="@dimen/global_margin"
            android:background="@drawable/bg_button"
            android:elevation="@dimen/_20sdp"
            android:padding="@dimen/_16sdp"
            app:carbon_elevationShadowColor="@color/white_shadow"
            app:layout_constraintBottom_toBottomOf="@+id/search_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/search_et" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/switch_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/global_margin"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/global_margin"
            android:background="@drawable/bg_switch_layout"
            android:padding="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/search_et">

            <TextView
                android:id="@+id/food_item_tv"
                android:layout_width="0dp"
                android:layout_height="@dimen/_47sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_switch_selected"
                android:fontFamily="@font/sofia_pro_medium"
                android:gravity="center"
                android:text="@string/food_item"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/restaurant_tv"
                android:layout_width="0dp"
                android:layout_height="@dimen/_47sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_switch_unselected"
                android:fontFamily="@font/sofia_pro_medium"
                android:gravity="center"
                android:text="@string/restaurant"
                android:textColor="@color/orange" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:fastScrollEnabled="false"
            android:layout_marginStart="@dimen/global_margin"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/global_margin"
            android:layout_marginBottom="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_layout"
            tools:listitem="@layout/item_product" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>